# mvg_variational_bayes

./: .gitignore  README.md  setup.cfg
src/demo/: data_loader.py  pork_demo.py
src/demo/data/: porkScan_porkScan.csv
src/demo/img/: .gitignore
src/mvg_variational_bayes/: __init__.py  _data_dtype.py  _mvg_variational_bayes.py  _posterior_component_probability.py
src/mvg_variational_bayes/helper_scripts/: __init__.py  plot_result.py
test/mvg_variational_bayes/: test_mvg_variational_bayes.py  test_posterior_component_probability.py
