[metadata]
name = mvg_variational_bayes
author = Christoph Lienhard
platforms = linux
keywords = test, unittest

[options]
packages =
    mvg_variational_bayes
install_requires =
  numpy~=1.0
python_requires = >=3.8
package_dir =
    =src
setup_requires =
    setuptools

[options.extras_require]
dev =
  black
  flake8
  mypy
  pytest
  isort

[flake8]
# Style-related configurations
max-line-length = 120
extend-ignore = E203  # Ignore whitespace before ':' (conflicts with black)

[mypy]
# Type-checking configurations
python_version = 3.8
strict = True
warn_unused_ignores = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
disallow_incomplete_defs = True
warn_incomplete_stub = True
show_error_codes = True

[tool:pytest]
addopts = --strict-markers

[isort]
profile = black